# drug_discovery

./: .gitignore  MVP_PROTOCOL.md  README.md  mcp_servers.chembl.json  pyproject.toml
src/kdense_researcher/: __init__.py  agent.py  api.py  bootstrap_gdsc_depmap.py  cli.py  config.py  data_pipeline.py  download_gdsc_depmap.py  evaluate.py  harmonize.py  llm.py  llm_analysis.py  mcp.py  pubmed_ingest.py  rag.py  train.py
