[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdense-researcher"
version = "0.1.0"
description = "MCP + RAG starter for anticancer research workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kdense-research = "kdense_researcher.cli:main"
kdense-ingest-pubmed = "kdense_researcher.pubmed_ingest:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
